# syntheseus

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DEVELOPMENT.md  README.md  SUPPORT.md  environment.yml  environment_full.yml  index.html  mkdocs.yml  pyproject.toml  versions.json  下载教程到本地.txt  多步逆合成教程-README.md  如何在Cursor中查看教程.md  教程文件索引.md  本地安装指南.md  简单示例.py
.github/azure_pipelines/: code-security-analysis.yml
.github/workflows/: ci.yml  ci_integration.yml  ci_single_step.yml  docs.yml  release.yml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/cli/eval_single_step/: index.html
0.3.0/installation/: index.html
0.3.0/single_step/: index.html
0.3.0/tutorials/quick_start/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/cli/eval_single_step/: index.html
0.4.0/cli/search/: index.html
0.4.0/installation/: index.html
0.4.0/single_step/: index.html
0.4.0/tutorials/custom_model/: index.html
0.4.0/tutorials/paroutes_benchmark/: index.html
0.4.0/tutorials/quick_start/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/cli/eval_single_step/: index.html
0.4.1/cli/search/: index.html
0.4.1/installation/: index.html
0.4.1/single_step/: index.html
0.4.1/tutorials/custom_model/: index.html
0.4.1/tutorials/paroutes_benchmark/: index.html
0.4.1/tutorials/quick_start/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/cli/eval_single_step/: index.html
0.5.0/cli/search/: index.html
0.5.0/installation/: index.html
0.5.0/single_step/: index.html
0.5.0/tutorials/custom_model/: index.html
0.5.0/tutorials/paroutes_benchmark/: index.html
0.5.0/tutorials/quick_start/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/cli/eval_single_step/: index.html
0.6.0/cli/search/: index.html
0.6.0/installation/: index.html
0.6.0/single_step/: index.html
0.6.0/tutorials/custom_model/: index.html
0.6.0/tutorials/paroutes_benchmark/: index.html
0.6.0/tutorials/quick_start/: index.html
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/cli/eval_single_step/: index.html
0.7.0/cli/search/: index.html
0.7.0/installation/: index.html
0.7.0/single_step/: index.html
0.7.0/tutorials/custom_model/: index.html
0.7.0/tutorials/paroutes_benchmark/: index.html
0.7.0/tutorials/quick_start/: index.html
0.7.1/: 404.html  index.html  sitemap.xml
0.7.1/cli/eval_single_step/: index.html
0.7.1/cli/search/: index.html
0.7.1/installation/: index.html
0.7.1/single_step/: index.html
0.7.1/tutorials/custom_model/: index.html
0.7.1/tutorials/paroutes_benchmark/: index.html
0.7.1/tutorials/quick_start/: index.html
0.7.2/: 404.html  index.html  sitemap.xml
0.7.2/cli/eval_single_step/: index.html
0.7.2/cli/search/: index.html
0.7.2/installation/: index.html
0.7.2/single_step/: index.html
0.7.2/tutorials/custom_model/: index.html
0.7.2/tutorials/paroutes_benchmark/: index.html
0.7.2/tutorials/quick_start/: index.html
cli/eval_single_step/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/cli/eval_single_step/: index.html
dev/cli/search/: index.html
dev/installation/: index.html
dev/single_step/: index.html
dev/tutorials/custom_model/: index.html
dev/tutorials/paroutes_benchmark/: index.html
dev/tutorials/quick_start/: index.html
docs/: index.md  installation.md  single_step.md  多步逆合成使用指南.md
docs/cli/: eval_single_step.md  search.md
docs/tutorials/: .gitignore  custom_model.ipynb  paroutes_benchmark.ipynb  quick_start.ipynb  多步逆合成完整教程.ipynb
installation/: index.html
single_step/: index.html
syntheseus/: __init__.py
syntheseus/cli/: eval_single_step.py  main.py  search.py  search_config.yml
syntheseus/interface/: bag.py  models.py  molecule.py  reaction.py  typed_dict.py
syntheseus/reaction_prediction/chem/: utils.py
syntheseus/reaction_prediction/cli/: eval.md  eval.py
syntheseus/reaction_prediction/data/: dataset.py  reaction_sample.py
syntheseus/reaction_prediction/environment_gln/: Dockerfile  environment.yml
syntheseus/reaction_prediction/environments/: README.md  environment_shared.yml  setup_chemformer.sh  setup_local_retro.sh  setup_megan.sh  setup_mhn_react.sh  setup_retro_knn.sh  setup_root_aligned.sh  setup_shared.sh
syntheseus/reaction_prediction/environments/gln/: Dockerfile
syntheseus/reaction_prediction/filters/: forward.py  scoring.py  wrapper.py
syntheseus/reaction_prediction/inference/: __init__.py  base.py  chemformer.py  config.py  default_checkpoint_ids.yml  default_checkpoint_links.yml  gln.py  graph2edits.py  local_retro.py  megan.py  mhnreact.py  retro_knn.py  root_aligned.py  toy_models.py
syntheseus/reaction_prediction/models/: retro_knn.py
syntheseus/reaction_prediction/utils/: compose.py  config.py  downloading.py  inference.py  metrics.py  misc.py  model_loading.py  parallel.py  syntheseus_wrapper.py  testing.py
syntheseus/search/: __init__.py  chem.py  mol_inventory.py  visualization.py
syntheseus/search/algorithms/: base.py  breadth_first.py  mixins.py  pdvn.py  random.py
syntheseus/search/analysis/: diversity.py  route_extraction.py  solution_time.py  starting_molecule_match.py
syntheseus/search/graph/: and_or.py  base_graph.py  molset.py  node.py  route.py  standardization.py
syntheseus/search/node_evaluation/: __init__.py  base.py  common.py
syntheseus/search/reaction_models/: __init__.py  base.py  toy.py
syntheseus/search/utils/: misc.py
syntheseus/tests/: conftest.py
syntheseus/tests/cli/: test_cli.py  test_eval_single_step.py  test_search.py
syntheseus/tests/interface/: test_bag.py  test_filter_models.py  test_models.py  test_molecule.py  test_reaction.py  test_toy_models.py
syntheseus/tests/search/: conftest.py  test_chem.py  test_mol_inventory.py  test_reaction_models.py  test_visualization.py
tutorials/quick_start/: index.html
tutorials/search/: 1- end to end retrosynthesis with a toy model.ipynb  2a- advanced algorithms on PaRoutes.ipynb  2b- PaRoutes in-depth analysis.ipynb  paroutes.py  paroutes_setup.sh
(+36 files in other folders)
